<resources>
    <string name="app_name">OnlineShop</string>

    <string name="query_hint">جستجو در دیجی کالا</string>
    <string name="home_page">خانه</string>
    <string name="category">دسته بندی ها</string>
    <string name="shopping_bag">سبد خرید</string>
    <string name="profile">دیجی کالای من</string>
    <string name="digiKala">دیجی کالا</string>

    <string name="recent_products">جدیدترین</string>
    <string name="most_visited_products">پربازدیدترین</string>
    <string name="top_rated_products">بیشترین امتیاز</string>

    <string name="product_price">قیمت:</string>
    <string name="add_bag">افزودن به سبد خرید</string>
    <string name="product_name">نام کالا</string>
    <string name="product_description">توضیحات:</string>
    <string name="category_name">دسته کالا</string>
    <string name="progress_bar">در حال لود شدن...</string>
    <string name="search_query">دسته یا محصول </string>

    <string name="delete_card_item">حذف </string>
    <string name="count">تعداد </string>
    <string name="final_price">قیمت نهایی </string>
    <string name="toman">%1$s, تومان</string>
    <string name="final_sale">جمع کل خرید</string>
    <string name="final_shop">خرید خود را نهایی کنید</string>




</resources>