<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/main_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/card_sale_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/final_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_sale"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_card_list_item__card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="2dp"
            app:cardCornerRadius="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="0.7"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/card_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"
                            android:gravity="right"
                            android:lines="3"
                            android:text="@string/product_description"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="right"
                            android:textSize="10dp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:gravity="center|right">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/card_minus_button"
                                android:layout_width="44dp"
                                android:layout_height="match_parent"
                                android:layout_marginRight="12dp"
                                android:backgroundTint="#6200EA"
                                app:icon="@drawable/ic_minus"
                                app:iconSize="12dp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/card_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="12dp"
                                android:text="@string/count"
                                android:textColor="@color/black"
                                android:textSize="10sp" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/card_plus_button"
                                android:layout_width="44dp"
                                android:layout_height="31dp"
                                android:layout_marginRight="12dp"
                                android:backgroundTint="#00C853"
                                app:icon="@drawable/ic_plus"
                                app:iconSize="12dp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/appCompatTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="10sp" />


                        </LinearLayout>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/card_image_view"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="0.3"
                        android:elevation="4dp"
                        android:scaleType="fitCenter" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/gray">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/card_final_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="0.5"
                        android:gravity="left"
                        android:padding="2dp"
                        android:text="@string/toman"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:padding="2dp"
                        android:text="@string/final_price"
                        android:textColor="@color/digikala_splash"
                        android:textSize="12sp" />

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/card_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/digikala_splash"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/delete_card_item"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>