<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".fragment.ProductDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <include layout="@layout/slider_image_view" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:background="@color/digikala_splash" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="200000" />

            <TextView
                android:id="@+id/product_regular_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/digikala_splash"
                android:textSize="20sp"
                tools:text="100000" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/product_description"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />


            <Button
                android:id="@+id/add_bag_shop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="2"
                android:background="@color/digikala_splash"
                android:text="@string/add_bag"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@color/digikala_splash" />

        </LinearLayout>

        <TextView
            android:id="@+id/product_final_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/product_price"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>